--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@popperjs/core": "2.9.1",
         "@reduxjs/toolkit": "^2.2.1",
         "pure-react-carousel": "^1.30.1",
+        "react-cookie": "^7.1.0",
         "react-redux": "^9.1.0",
         "react-toastify": "^10.0.5",
         "yarn": "^1.22.21"
